<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.apppartner.androidtest.login.LoginActivity"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_input_height"
            android:layout_marginTop="@dimen/login_input_top"
            android:layout_marginBottom="@dimen/login_input_bottom"
            android:layout_marginLeft="@dimen/login_side_margins"
            android:layout_marginRight="@dimen/login_side_margins"
            android:gravity="top"
            android:textSize="@dimen/text_input_fields"
            android:hint="@string/username_edit" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_input_height"
            android:layout_marginLeft="@dimen/login_side_margins"
            android:layout_marginRight="@dimen/login_side_margins"
            android:layout_gravity="top"
            android:hint="@string/password_edit"
            android:textSize="@dimen/text_input_fields"
            android:inputType="textPassword"
            android:layout_marginBottom="@dimen/password_input_margin_bottom"/>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_input_height"
            android:layout_marginLeft="@dimen/login_side_margins"
            android:layout_marginRight="@dimen/login_side_margins"
            android:background="@color/button_orange"
            android:textColor="@color/button_text"
            android:textSize="@dimen/button_text_size"
            android:text="@string/login_button"
            />

    </LinearLayout>
</RelativeLayout>
